--- a/gallery.html
+++ b/gallery.html
@@ -19,10 +19,10 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="index.html"
-          ><img src="./static/amity-logo.png" alt=""
+          ><img src="./static/amity-01.png" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -125,7 +125,7 @@
         </div>
       </div>
     </nav>
-
+    
     <main class="container">
       <div
         class="p-5 m-5 mx-auto text-grey rounded"
