--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand mx-1" href="index.html"
-          ><img src="./static/amity-logo.png" alt=""
+        <a class="navbar-brand mx-1 shadow-lg" href="index.html"
+          ><img src="./static/amity-01.png" alt=""
         /></a>
         <button
           class="navbar-toggler"
