changed time in app.js

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -135,7 +135,7 @@
                 src="./delegates-logo/un-white.png"
                 alt=""
               />
-              <div class="card-body" style="background-color: #f4f4f4">
+              <div class="card-body" style="background-color: #fff">
                 <h3>United Nations General Assembly-1</h3>
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -184,7 +184,7 @@
                 src="./delegates-logo/ctc.png"
                 alt=""
               />
-              <div class="card-body" style="background-color: #f4f4f4">
+              <div class="card-body" style="background-color: #fff">
                 <h3>Counter Terrorism Committee</h3>
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -210,7 +210,7 @@
                 src="./delegates-logo/unhrc-white.png"
                 alt=""
               />
-              <div class="card-body" style="background-color: #f4f4f4">
+              <div class="card-body" style="background-color: #fff">
                 <h3>United Nation Human Right Council</h3>
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -234,7 +234,7 @@
                 src="./delegates-logo/aippm-ip.png"
                 alt=""
               />
-              <div class="card-body" style="background-color: #f4f4f4">
+              <div class="card-body" style="background-color: #fff">
                 <h3>All India Political Parties Meet</h3>
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -259,7 +259,7 @@
                 src="./delegates-logo/ip-white.png"
                 alt=""
               />
-              <div class="card-body" style="background-color: #f4f4f4">
+              <div class="card-body" style="background-color: #fff">
                 <h3>International Press Corps</h3>
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
