added delegates pages; updated nav bar; added messages page

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -73,7 +73,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle text-white"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -89,19 +89,19 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="./messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="./messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a class="dropdown-item" href="./messages/org-com.html"
                     >Organising Committee</a
                   >
                 </li>
@@ -143,9 +143,9 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-outline-secondary">
+                    <a type="button" class="btn btn-outline-secondary" href="./delegates/ga.html">
                       Read more
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -168,9 +168,9 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-outline-secondary">
+                    <a type="button" class="btn btn-outline-secondary" href="./delegates/wha.html">
                       Read more
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -193,9 +193,9 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-outline-secondary">
+                    <a type="button" class="btn btn-outline-secondary" href="./delegates/ctc.html">
                       Read more
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -218,9 +218,9 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-outline-secondary">
+                    <a type="button" class="btn btn-outline-secondary" href="./delegates/hrc.html">
                       Read more
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -243,9 +243,9 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-outline-secondary">
+                    <a type="button" class="btn btn-outline-secondary" href="./delegates/aippm.html">
                       Read more
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -268,9 +268,9 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-outline-secondary">
+                    <a type="button" class="btn btn-outline-secondary" href="./delegates/ip.html">
                       Read more
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
