--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle text-white"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -89,19 +89,19 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="./messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="./messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a class="dropdown-item" href="./messages/org-com.html"
                     >Organising Committee</a
                   >
                 </li>
