--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle text-white"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -91,19 +91,19 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="./messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="./messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a class="dropdown-item" href="./messages/org-com.html"
                     >Organising Committee</a
                   >
                 </li>
@@ -125,7 +125,7 @@
         </div>
       </div>
     </nav>
-    
+
     <main class="container">
       <div
         class="p-5 m-5 mx-auto text-grey rounded"
