--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="./messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./register/delegate_register.html"
+                    href="./messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a class="dropdown-item" href="./messages/org-com.html"
                     >Organising Committee</a
                   >
                 </li>
