changed logo png-to-svg in navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1 shadow-lg" href="index.html"
-          ><img src="./static/amity-01.png" alt=""
+          ><img src="./static/logo-main.svg" width="60px" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -80,7 +80,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Messages
+                Our Team
               </a>
               <ul
                 class="dropdown-menu"
