--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="index.html"
-          ><img src="./static/amity-01.png" alt=""
+          ><img src="./static/logo-main.svg" alt=""
         /></a>
         <button
           class="navbar-toggler"
