--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="index.html"
-          ><img src="./static/logo-main.svg" alt=""
+          ><img src="./static/logo-main.svg" width="55px" alt=""
         /></a>
         <button
           class="navbar-toggler"
