removed messages added 'our team' content

--- a/messages/org-com.html
+++ b/messages/org-com.html
@@ -12,6 +12,11 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <link rel="stylesheet" href="../gallery-style.css" />
     <title>AMIMUN '21</title>
   </head>
@@ -73,14 +78,14 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle text-white"
+                class="nav-link dropdown-toggle"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Messages
+                Our Team
               </a>
               <ul
                 class="dropdown-menu"
@@ -94,9 +99,7 @@
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="../messages/sec.html"
+                  <a class="dropdown-item" href="../messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
@@ -125,8 +128,178 @@
     </nav>
 
     <main class="container m-auto">
-      <h1>Coming Soon..</h1>
-      <div style="height: 80vh;"></div>
+      <div
+        class="p-5 m-5 mx-auto text-grey rounded"
+        style="background-color: #f5a98c"
+      >
+        <div class="px-0">
+          <h1 class="display-4 font-italic">Organising Committee</h1>
+          <p class="lead my-3">
+            Multiple lines of text that form the lede, informing new readers
+            quickly and efficiently about what’s most interesting in this post’s
+            contents.
+          </p>
+        </div>
+      </div>
+
+      <!-- Second Row [Team]-->
+      <div class="row pb-5 mb-4">
+        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <!-- Card-->
+          <div class="card shadow-lg border-0 rounded">
+            <div class="card-body p-0">
+              <img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                alt=""
+                class="w-100 card-img-top"
+              />
+              <div class="p-4">
+                <h5 class="mb-0">Mark Rockwell</h5>
+                <p class="small text-muted">CEO - Consultant</p>
+                <ul class="social mb-0 list-inline mt-3">
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-facebook-f"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-twitter"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-instagram"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-linkedin"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <!-- Card-->
+          <div class="card shadow-lg border-0 rounded">
+            <div class="card-body p-0">
+              <img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-3_ybnq8v.jpg"
+                alt=""
+                class="w-100 card-img-top"
+              />
+              <div class="p-4">
+                <h5 class="mb-0">Mark Rockwell</h5>
+                <p class="small text-muted">CEO - Consultant</p>
+                <ul class="social mb-0 list-inline mt-3">
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-facebook-f"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-twitter"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-instagram"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-linkedin"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <!-- Card-->
+          <div class="card shadow-lg border-0 rounded">
+            <div class="card-body p-0">
+              <img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1570799924/profile-4_s3fort.jpg"
+                alt=""
+                class="w-100 card-img-top"
+              />
+              <div class="p-4">
+                <h5 class="mb-0">Mark Rockwell</h5>
+                <p class="small text-muted">CEO - Consultant</p>
+                <ul class="social mb-0 list-inline mt-3">
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-facebook-f"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-twitter"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-instagram"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-linkedin"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <!-- Card-->
+          <div class="card shadow-lg border-0 rounded">
+            <div class="card-body p-0">
+              <img
+                src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
+                alt=""
+                class="w-100 card-img-top"
+              />
+              <div class="p-4">
+                <h5 class="mb-0">Mark Rockwell</h5>
+                <p class="small text-muted">CEO - Consultant</p>
+                <ul class="social mb-0 list-inline mt-3">
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-facebook-f"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-twitter"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-instagram"></i
+                    ></a>
+                  </li>
+                  <li class="list-inline-item m-0">
+                    <a href="#" class="social-link"
+                      ><i class="fa fa-linkedin"></i
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- FOOTER -->
       <footer class="container">
