--- a/gallery.html
+++ b/gallery.html
@@ -75,14 +75,14 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle text-white"
+                class="nav-link dropdown-toggle"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Messages
+                Our Team
               </a>
               <ul
                 class="dropdown-menu"
