--- a/about.html
+++ b/about.html
@@ -73,14 +73,14 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle text-white"
+                class="nav-link dropdown-toggle "
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Messages
+                Our Team
               </a>
               <ul
                 class="dropdown-menu"
@@ -125,7 +125,7 @@
     </nav>
 
     <main class="container m-auto">
-      <h1 class="m-5 text-center">ABOUT US</h1>
+      <h1 class="m-5 text-center">ABOUT</h1>
       <div class="p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
         <div class="px-0">
           <h1 class="display-4 font-italic">
