--- a/register/ip_register.html
+++ b/register/ip_register.html
@@ -78,7 +78,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Messages
+                Our Team
               </a>
               <ul
                 class="dropdown-menu"
