--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand mx-1 shadow-lg" href="index.html"
+        <a class="navbar-brand mx-1" href="index.html"
           ><img src="./static/logo-main.svg" width="55px" alt=""
         /></a>
         <button
