--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -80,7 +80,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Messages
+                Our Team
               </a>
               <ul
                 class="dropdown-menu"
