removed type=`button` from anchor tag in committee gallery

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -143,7 +143,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" class="btn btn-outline-secondary" href="./delegates/ga.html">
+                    <a class="btn btn-outline-secondary" href="./delegates/ga.html">
                       Read more
                     </a>
                   </div>
@@ -168,7 +168,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" class="btn btn-outline-secondary" href="./delegates/wha.html">
+                    <a class="btn btn-outline-secondary" href="./delegates/wha.html">
                       Read more
                     </a>
                   </div>
@@ -193,7 +193,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" class="btn btn-outline-secondary" href="./delegates/ctc.html">
+                    <a class="btn btn-outline-secondary" href="./delegates/ctc.html">
                       Read more
                     </a>
                   </div>
@@ -218,7 +218,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" class="btn btn-outline-secondary" href="./delegates/hrc.html">
+                    <a class="btn btn-outline-secondary" href="./delegates/hrc.html">
                       Read more
                     </a>
                   </div>
@@ -243,7 +243,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" class="btn btn-outline-secondary" href="./delegates/aippm.html">
+                    <a class="btn btn-outline-secondary" href="./delegates/aippm.html">
                       Read more
                     </a>
                   </div>
@@ -268,7 +268,7 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" class="btn btn-outline-secondary" href="./delegates/ip.html">
+                    <a class="btn btn-outline-secondary" href="./delegates/ip.html">
                       Read more
                     </a>
                   </div>
