--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
       <div class="container marketing">
         <h1 class="m-5 text-center">MESSAGE FROM SECRETARY GENERAL</h1>
-        <div class="mt-5">
+        <div class="mt-5 bg-light">
           <div
             class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-lg h-md-250 position-relative"
             style="background-color: #f4f4f4"
